@@ -1,3 +1,8 @@
+2010-02-02  Rik  <octave@nomad.inbox5.com>
+
+	* DLD-FUNCTIONS/eigs.cc, DLD-FUNCTIONS/qr.cc: Use testif to only run
+	some sparse tests when necessary libraries are installed.
+
 2011-02-03  Konstantinos Poulios  <logari81@googlemail.com>
 
 	* graphics.cc (axes::properties::update_axes_layout):
