@@ -1,3 +1,8 @@
+2010-02-02  Rik  <octave@nomad.inbox5.com>
+
+	* sparse/svds.m: Use testif to only run some sparse tests when
+	necessary libraries are installed.
+
 2011-02-01  Ben Abbott  <bpabbott@mac.com>
 
 	* plot/__gnuplot_has_feature__.m: Don't throw an error if gnuplot
